@@ -6,6 +6,7 @@ x.x:
 - changes for Elgg 1.9
 - added: group tool presets
 - added: grouppicker autocomplete
+- added: filter to group activity page
 - fixed: PHP fatal exceptions when using group admins on group join
 - fixed: problem with some tabs shown when logged out
 
